fix overflowing metadata editor

--- a/src/editor/plugins/core/metadataEditor/metadataEditor.less
+++ b/src/editor/plugins/core/metadataEditor/metadataEditor.less
@@ -1,7 +1,3 @@
-.metadataEditor .modal-body {
-    overflow: visible;
-}
-
 .rng-module-metadataEditor {
 
     table {
